2008-10-19 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring and porting to C++.

2008-10-18 Harri Pitkänen <hatapitk@iki.fi>

	* Refactoring and porting to C++.

2008-10-11 Harri Pitkänen <hatapitk@iki.fi>

	* Allow sentences to start with a digit.
	* Detect and handle ellipsis correctly.
	* Add option for accepting unfinished paragraphs.
	* Increase version info for 2.1.

2008-08-22 Harri Pitkänen <hatapitk@iki.fi>

	* Modify some grammar error checks to affect 2 instead of
	  1 character so that they become slightly easier to see.
	* Add option explanation_language=... to voikkogc for printing
	  human readable error explanations.
	* Fix whitespace detection in get_char_type.

2008-08-13 Harri Pitkänen <hatapitk@iki.fi>

	* Add check for missing punctuation at the end of sentence.
	* Add option VOIKKO_OPT_ACCEPT_TITLES_IN_GC.

2008-08-10 Harri Pitkänen <hatapitk@iki.fi>

	* Fix character case check after colon.

2008-08-03 Harri Pitkänen <hatapitk@iki.fi>

	* Bug fixing.
	* Add check for duplicated words.

2008-08-02 Harri Pitkänen <hatapitk@iki.fi>

	* Ignore option VOIKKO_OPT_IGNORE_DOT in sentence
	  splitting and grammar checking, but document its effects
	  on string tokenizer.
	* Various small bug fixes.

2008-07-27 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for suggestions from grammar checker.

2008-07-26 Harri Pitkänen <hatapitk@iki.fi>

	* Add character case checks to grammar checker.

2008-07-16 Harri Pitkänen <hatapitk@iki.fi>

	* More punctuation checks to grammar checker.

2008-07-08 Harri Pitkänen <hatapitk@iki.fi>

	* Change grammar checker API to allow more than one
	  grammar error with the same start position.
	* New grammar checker test for space before punctuation.

2008-07-03 Harri Pitkänen <hatapitk@iki.fi>

	* Work on grammar checker.
	* Add whitespace error checks.

2008-07-02 Harri Pitkänen <hatapitk@iki.fi>

	* Work on grammar checker.
	* Increase library version number to 2.0.
	* Update README.
