@@ -97,7 +97,6 @@ AC_CHECK_FUNCS([mbrlen])
 AC_CHECK_FUNCS([memset])
 AC_CHECK_FUNCS([strchr])
 AC_CHECK_FUNCS([getpwuid_r])
-AC_CHECK_FUNCS([getline])
 AM_ICONV
 
 dnl Default compiler settings
